More accessible navigation menu

--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -99,7 +99,7 @@
     width: 100%
 
     &:active, &:focus
-      background-color: $accent-color
+      background-color: var(--accent-background-color)
       border-color: $link-hover-color
 
 .cart-footer
