--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -35,7 +35,7 @@
 
 .featured-category
   display: flex
-  background-color: $accent-color
+  background-color: var(--accent-background-color)
   margin-bottom: 50px
   padding: 80px
 
