--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -64,7 +64,7 @@
     margin-left: 8px
     border: 1px solid var(--border-color)
     border-radius: var(--border-radius)
-    background: $accent-color
+    background: var(--accent-background-color)
     letter-spacing: 1.1px
 
   &__pricing
