--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -119,7 +119,7 @@ a.product-list-link
   display: flex
   align-items: center
   justify-content: center
-  color: var(--primary-text-color)
+  color: var(--text-color)
   position: relative
   text-align: center
   width: 100%
