--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -1,6 +1,6 @@
 .home-welcome
   display: grid
-  color: $welcome-header-text-color
+  color: var(--welcome-header-text-color)
   position: relative
   align-items: center
   margin-bottom: 80px
