--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -1,6 +1,8 @@
 \:root
   --background-color: #{'{{ theme.background_color }}'}
 
+  --shop-name-text-color: #{'{{ theme.shop_name_text_color }}'}
+
   --text-color: #{'{{ theme.text_color }}'}
   --link-hover-color: #{'{{ theme.link_hover_color }}'}
 
@@ -24,6 +26,9 @@
   --product-status-background-color: var(--background-color)
   --product-status-text-color: var(--text-color)
 
+  --shop-name-font: #{'{{ theme.shop_name_font | font_family }}'}
+  --primary-font: #{'{{ theme.primary_font | font_family }}'}
+
   --border-radius: 0
   --border-radius-sm: 2px
   --spacing-unit: 16px
@@ -31,9 +36,9 @@
 body
   +flexbox
   +flex-direction(column)
-  background-color: $background-color
-  color: $text-color
-  font-family: $primary-font
+  background-color: var(--background-color)
+  color: var(--text-color)
+  font-family: var(--primary-font)
   height: 100%
   min-height: 100vh
 
@@ -43,9 +48,9 @@ body
 
 a.skip-link
   +transition(all .3s)
-  background: $background-color
-  border: 1px solid $text-color
-  color: $text-color
+  background: var(--background-color)
+  border: 1px solid var(--text-color)
+  color: var(--text-color)
   left: 25px
   padding: 15px 20px
   position: absolute
@@ -57,11 +62,11 @@ a.skip-link
     top: 20px
 
 a, a:visited
-  color: $text-color
+  color: var(--text-color)
   text-decoration: none
 
   &:hover, &:focus
-    color: $link-hover-color
+    color: var(--link-hover-color)
 
 a[href], label[for], select, button, .pointer
   cursor: pointer
@@ -71,15 +76,13 @@ button, input, textarea, select
   background: none
   border: none
   border-radius: 0
-  color: $text-color
-  font-family: $primary-font
-  font-size: 16px
+  color: var(--text-color)
   padding: 0
 
 .button, a.button
   +transition(all .2s linear)
-  background-color: $button-background-color
-  color: $button-text-color
+  background-color: var(--button-background-color)
+  color: var(--button-text-color)
   height: 60px
   line-height: 60px
   max-width: 275px
@@ -90,7 +93,7 @@ button, input, textarea, select
   &.minimal-button
     +transform(none)
     background: none
-    color: $text-color
+    color: var(--text-color)
     border: none
     padding: 0
     text-decoration: underline
@@ -99,7 +102,7 @@ button, input, textarea, select
       +transform(none)
       box-shadow: none
       background: none
-      color: $link-hover-color
+      color: var(--link-hover-color)
 
   &:disabled, &.disabled
     cursor: not-allowed
@@ -110,22 +113,21 @@ button, input, textarea, select
     margin: 60px auto
 
   &:not(:disabled):hover, &:not(:disabled):active, &:not(:disabled):focus
-    background-color: $button-hover-background-color
-    color: $button-text-color
+    background-color: var(--button-hover-background-color)
+    color: var(--button-text-color)
 
     @media (hover: hover)
       +transform(scale(1.02, 1.02))
 
 h1, h2, h3, h4, h5, h6
-  color: $text-color
+  color: var(--text-color)
   font-weight: normal
   margin: 0
   padding: 0
   text-align: center
 
 h1
-  font-size: 40px
-  line-height: 50px
+  font-size: 2.5em
   margin-bottom: 55px
 
 .error-container
@@ -153,14 +155,9 @@ h1
   padding-bottom: 40px
 
 .custom-content
-  font-size: 20px
-  line-height: 1.5em
   margin: 0 auto
   max-width: 760px
   width: 100%
-
-  @media screen and (max-width: $break-small)
-    font-size: 16px
 
   p
     margin: revert
@@ -292,9 +289,8 @@ footer
     width: 80px
 
 .select
-  border: 1px solid $text-color
-  color: $text-color
-  font-family: $primary-font
+  border: 1px solid var(--text-color)
+  color: var(--text-color)
   height: 60px
   max-width: 100%
   padding: 0
@@ -304,8 +300,7 @@ footer
 
   select
     border: 0
-    color: $text-color
-    font-family: $primary-font
+    color: var(--text-color)
     height: 100%
     letter-spacing: 1px
     line-height: 60px
@@ -331,17 +326,17 @@ footer
 
   &:hover, &:active, &:focus, &:focus-within
     background-color: var(--accent-background-color)
-    color: $text-color
-    border-color: $text-color
+    color: var(--text-color)
+    border-color: var(--text-color)
 
     select
-      color: $text-color
+      color: var(--text-color)
 
       option:disabled
         color: graytext
 
     svg
-      fill: $text-color
+      fill: var(--text-color)
 
 .visually-hidden
   border: 0
