Cart / contact / error message fixes

--- a/source/stylesheets/contact.sass
+++ b/source/stylesheets/contact.sass
@@ -1,9 +1,16 @@
+.contact-container
+  margin: 0 auto
+  max-width: 700px
+  width: 100%
+
+  @media screen and (max-width: $break-small)
+    max-width: 100%
+
 .contact-form
   display: flex
   flex-direction: column
   gap: 24px
   margin: 0 auto
-  max-width: 700px
 
 .contact-form-block
   display: flex
