--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -8,6 +8,8 @@
 
   --accent-background-color: #{'{{ theme.accent_background_color }}'}
 
+  --border-color: #{'rgba(var(--text-color-rgb), .4)'}
+
   --header-text-color: #{'{{ theme.header_text_color }}'}
 
   --button-background-color: #{'{{ theme.button_background_color }}'}
@@ -130,25 +132,14 @@ h1
   font-size: 2.5em
   margin-bottom: 55px
 
-.error-container
-  +flexbox
-  +justify-content(center)
-  +align-items(center)
-  background-color: var(--accent-background-color)
-  padding: 20px
-  margin: 0 auto 30px
-  max-width: 760px
-
-  .error-list
-    list-style: none
-    margin: 0
-    padding: 0
-
 .wrapper
   margin: 0 auto
   max-width: 1240px
   padding: 0 20px
   width: 100%
+
+#product .content .wrapper
+  max-width: 1100px
 
 #main
   flex: 1
@@ -353,9 +344,10 @@ footer
   background-color: var(--announcement-background-color)
   color: var(--announcement-text-color)
   padding: 16px
-  margin-bottom: 32px
-  text-align: left
+  margin: 0 auto 32px
+  text-align: center
   width: 100%
+  max-width: 760px
 
   &--centered
     text-align: center
@@ -368,3 +360,18 @@ footer
   &--errors
     background-color: var(--error-background-color)
     color: var(--error-text-color)
+
+.cart-count
+  position: relative
+  top: -12px
+  left: -8px
+  border-radius: 50%
+  color: var(--text-color)
+  display: flex
+  font-weight: 700
+  align-items: center
+  justify-content: center
+  font-size: 15px
+  padding: 2px
+  height: 20px
+  width: 20px
