--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -55,17 +55,14 @@
     align-items: flex-start
 
   &__status
-    text-transform: uppercase
-    font-size: .825rem
+    font-size: .975rem
     line-height: normal
-    font-weight: 700
     display: inline-block
     padding: 4px 6px
     margin-left: 8px
-    border: 1px solid var(--border-color)
     border-radius: var(--border-radius)
     background: var(--accent-background-color)
-    letter-spacing: 1.1px
+    border-radius: var(--border-radius-sm)
 
   &__pricing
     display: flex
