--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -1,70 +1,42 @@
+\:root
+  --background-color: #{'{{ theme.background_color }}'}
+
+  --shop-name-text-color: #{'{{ theme.shop_name_text_color }}'}
+
+  --text-color: #{'{{ theme.text_color }}'}
+  --link-hover-color: #{'{{ theme.link_hover_color }}'}
+
+  --accent-background-color: #{'{{ theme.accent_background_color }}'}
+
+  --border-color: #{'rgba(var(--text-color-rgb), .4)'}
+
+  --header-text-color: #{'{{ theme.header_text_color }}'}
+
+  --button-background-color: #{'{{ theme.button_background_color }}'}
+  --button-hover-background-color: #{'{{ theme.button_hover_background_color }}'}
+  --button-text-color: #{'{{ theme.button_text_color }}'}
+
+  --error-background-color: #950f1e
+  --error-text-color: #FFFFFF
+
+  --shadow-color: #{'rgba(var(--text-color-rgb), 0.15)'}
+  --menu-box-shadow: 0px 0.4px 0.5px var(--shadow-color), 0px 1.3px 1.5px -0.8px var(--shadow-color), 0px 3.4px 3.8px -1.7px var(--shadow-color), 0px 8.2px 9.2px -2.5px var(--shadow-color)
+
+  --announcement-background-color: #{'{{ theme.accent_background_color }}'}
+  --announcement-text-color: #{'{{ theme.text_color }}'}
+
+  --product-status-background-color: var(--background-color)
+  --product-status-text-color: var(--text-color)
+
+  --shop-name-font: #{'{{ theme.shop_name_font | font_family }}'}
+  --primary-font: #{'{{ theme.primary_font | font_family }}'}
+
+  --border-radius: #{'{{ theme.border_radius }}'}
+  --border-radius-sm: 2px
+  --spacing-unit: 16px
+
 $break-extra-large: 1200px
 $break-large: 945px
 $break-medium: 800px
 $break-small: 668px
 $break-extra-small: 500px
-
-@mixin all-transitions
-  +transition(.2s linear)
-
-@mixin transition($transition...)
-  -webkit-transition: #{$transition}
-  transition: #{$transition}
-
-@mixin transform($str...)
-  -webkit-transform: $str
-  transform: $str
-
-@mixin transform-origin($str...)
-  -webkit-transform-origin: $str
-  transform-origin: $str
-
-@mixin keyframes($animation...)
-  @-webkit-keyframes #{$animation}
-    @content
-
-  @keyframes #{$animation}
-    @content
-
-@mixin animation($str...)
-  -webkit-animation: $str
-  animation: $str
-
-@mixin appearance($str...)
-  -webkit-appearance: none
-  -moz-appearance: none
-  appearance: none
-
-*, *::before, *::after
-  box-sizing: border-box
-
-*
-  margin: 0
-  padding: 0
-  border: 0
-
-body
-  line-height: 1.5
-  -webkit-font-smoothing: antialiased
-
-img, picture, video, canvas, svg, iframe, embed, audio
-  display: block
-  max-width: 100%
-
-input, button, textarea, select
-  +appearance(none)
-  border: 0
-  border-radius: 0
-  background: none
-  color: inherit
-  font: inherit
-
-button
-  cursor: pointer
-
-p, h1, h2, h3, h4, h5, h6
-  overflow-wrap: break-word
-  word-break: break-word
-
-ol, ul
-  list-style: none
