--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -1,4 +1,5 @@
-@import 'flexbox'
+@import 'mixins'
+@import 'reset'
 @import 'variables'
 
 @import 'layout'
@@ -11,3 +12,5 @@
 @import 'product-carousel'
 @import 'product'
 @import 'products'
+@import 'search'
+@import 'overlay'
