--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -1,40 +1,3 @@
-\:root
-  --background-color: #{'{{ theme.background_color }}'}
-
-  --shop-name-text-color: #{'{{ theme.shop_name_text_color }}'}
-
-  --text-color: #{'{{ theme.text_color }}'}
-  --link-hover-color: #{'{{ theme.link_hover_color }}'}
-
-  --accent-background-color: #{'{{ theme.accent_background_color }}'}
-
-  --border-color: #{'rgba(var(--text-color-rgb), .4)'}
-
-  --header-text-color: #{'{{ theme.header_text_color }}'}
-
-  --button-background-color: #{'{{ theme.button_background_color }}'}
-  --button-hover-background-color: #{'{{ theme.button_hover_background_color }}'}
-  --button-text-color: #{'{{ theme.button_text_color }}'}
-
-  --error-background-color: #950f1e
-  --error-text-color: #FFFFFF
-
-  --shadow-color: #{'rgba(var(--text-color-rgb), 0.1)'}
-  --shadow-elevation-medium: 0px 0.4px 0.5px var(--shadow-color), 0px 1.3px 1.5px -0.8px var(--shadow-color), 0px 3.4px 3.8px -1.7px var(--shadow-color), 0px 8.2px 9.2px -2.5px var(--shadow-color)
-
-  --announcement-background-color: #{'{{ theme.accent_background_color }}'}
-  --announcement-text-color: #{'{{ theme.text_color }}'}
-
-  --product-status-background-color: var(--background-color)
-  --product-status-text-color: var(--text-color)
-
-  --shop-name-font: #{'{{ theme.shop_name_font | font_family }}'}
-  --primary-font: #{'{{ theme.primary_font | font_family }}'}
-
-  --border-radius: 0
-  --border-radius-sm: 2px
-  --spacing-unit: 16px
-
 body
   +flexbox
   +flex-direction(column)
@@ -70,26 +33,19 @@ a, a:visited
   &:hover, &:focus
     color: var(--link-hover-color)
 
-a[href], label[for], select, button, .pointer
-  cursor: pointer
-
-button, input, textarea, select
-  +appearance(none)
-  background: none
-  border: none
-  border-radius: 0
-  color: var(--text-color)
-  padding: 0
-
 .button, a.button
   +transition(all .2s linear)
   background-color: var(--button-background-color)
+  border-radius: var(--border-radius)
   color: var(--button-text-color)
   height: 60px
-  line-height: 60px
+  display: flex
+  align-items: center
+  justify-content: center
   max-width: 275px
-  padding: 0 40px
+  padding: 0 20px
   text-align: center
+  white-space: pre-wrap
   width: 100%
 
   &.minimal-button
@@ -99,6 +55,7 @@ button, input, textarea, select
     border: none
     padding: 0
     text-decoration: underline
+    text-underline-offset: 4px
 
     &:not(:disabled):hover, &:not(:disabled):active, &:not(:disabled):focus
       +transform(none)
@@ -108,10 +65,8 @@ button, input, textarea, select
 
   &:disabled, &.disabled
     cursor: not-allowed
-    opacity: .3
 
   &.centered-button
-    display: block
     margin: 60px auto
 
   &:not(:disabled):hover, &:not(:disabled):active, &:not(:disabled):focus
@@ -129,17 +84,14 @@ h1, h2, h3, h4, h5, h6
   text-align: center
 
 h1
-  font-size: 2.5em
-  margin-bottom: 55px
+  font-size: 2.25em
+  margin-bottom: 48px
 
 .wrapper
   margin: 0 auto
-  max-width: 1240px
+  max-width: 1200px
   padding: 0 20px
   width: 100%
-
-#product .content .wrapper
-  max-width: 1100px
 
 #main
   flex: 1
@@ -186,7 +138,7 @@ h1
     margin-bottom: 0
 
 .header
-  margin-bottom: 100px
+  margin-bottom: 80px
 
   @media screen and (max-width: $break-small)
     margin-bottom: 40px
@@ -195,19 +147,24 @@ a.store-link
   color: var(--shop-name-text-color)
   display: block
   font-family: var(--shop-name-font)
-  font-size: 3em
-  margin: 60px auto
+  font-size: 2.5em
+  line-height: 1.3
+  margin: 40px auto
   max-width: 754px
   width: 100%
+
+  @media screen and (max-width: $break-small)
+    font-size: 1.5em
+    margin: 20px auto
 
 .store-logo
   display: block
   margin: 0 auto
   max-width: 100%
-  max-height: 200px
+  max-height: 90px
 
   @media screen and (max-width: $break-small)
-    max-height: 150px
+    max-height: 72px
 
 header, footer
   +flexbox
@@ -228,6 +185,25 @@ footer
 
 .footer-store-name
   font-size: 1.5em
+
+.footer__pages
+  display: flex
+  column-gap: 30px
+  max-width: 800px
+  flex-wrap: wrap
+  margin: 0 auto
+  justify-content: center
+  row-gap: 12px
+
+  @media screen and (max-width: $break-small)
+    flex-direction: column
+
+  a
+    display: block
+    padding: 2px
+
+    &:hover
+      text-decoration: underline
 
 .social-icons
   display: flex
@@ -281,6 +257,7 @@ footer
 
 .select
   border: 1px solid var(--text-color)
+  border-radius: var(--border-radius)
   color: var(--text-color)
   height: 60px
   max-width: 100%
@@ -290,11 +267,7 @@ footer
   width: 100%
 
   select
-    border: 0
-    color: var(--text-color)
     height: 100%
-    letter-spacing: 1px
-    line-height: 60px
     padding: 0 66px 0 16px
     position: relative
     width: 100%
@@ -307,27 +280,13 @@ footer
       box-shadow: none
 
   svg
-    +all-transitions
     +transform(translateY(-50%))
+    pointer-events: none
     fill: currentColor
     position: absolute
     right: 20px
     top: 50%
     z-index: 1
-
-  &:hover, &:active, &:focus, &:focus-within
-    background-color: var(--accent-background-color)
-    color: var(--text-color)
-    border-color: var(--text-color)
-
-    select
-      color: var(--text-color)
-
-      option:disabled
-        color: graytext
-
-    svg
-      fill: var(--text-color)
 
 .visually-hidden
   border: 0
@@ -360,18 +319,3 @@ footer
   &--errors
     background-color: var(--error-background-color)
     color: var(--error-text-color)
-
-.cart-count
-  position: relative
-  top: -12px
-  left: -8px
-  border-radius: 50%
-  color: var(--text-color)
-  display: flex
-  font-weight: 700
-  align-items: center
-  justify-content: center
-  font-size: 15px
-  padding: 2px
-  height: 20px
-  width: 20px
