--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -22,6 +22,9 @@
     --gap: calc(var(--spacing-unit) * 2)
     justify-content: flex-start
 
+  @media screen and (max-width: $break-small)
+    --row-gap: 24px
+
 .product-list-thumb
   position: relative
   text-decoration: none
@@ -86,23 +89,22 @@ a.product-list-link
     object-fit: contain
 
 .product-list-thumb-status
-  background: var(--product-status-background-color)
-  border-radius: var(--border-radius)
-  color: var(--product-status-text-color)
   top: 12px
   right: 12px
-  font-size: .875rem
-  line-height: 1em
-  letter-spacing: 1.12px
-  font-weight: 700
   position: absolute
-  text-transform: uppercase
-  padding: 6px
   z-index: 2
+  font-size: .925rem
+  line-height: normal
+  display: inline-block
+  padding: 6px 8px
+  color: var(--button-text-color)
+  border-radius: var(--border-radius)
+  background: var(--button-background-color)
+  border-radius: var(--border-radius-sm)
 
 .product-list-thumb-info
   line-height: normal
-  padding: 16px 0 0
+  padding: 12px 0 0
   position: relative
   text-align: center
   display: grid
@@ -111,6 +113,9 @@ a.product-list-link
 .product-list-thumb-name
   font-size: 1.25em
   word-break: break-word
+
+  @media screen and (max-width: $break-small)
+    font-size: 1em
 
 .product-list-thumb-price
   font-size: .975rem
