--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -25,8 +25,8 @@
   --announcement-background-color: #{'{{ theme.accent_background_color }}'}
   --announcement-text-color: #{'{{ theme.text_color }}'}
 
-  --product-status-background-color: var(--background-color)
-  --product-status-text-color: var(--text-color)
+  --product-status-background-color: var(--button-background-color)
+  --product-status-text-color: var(--button-text-color)
 
   --shop-name-font: #{'{{ theme.shop_name_font | font_family }}'}
   --primary-font: #{'{{ theme.primary_font | font_family }}'}
