--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -97,9 +97,8 @@ a.product-list-link
   line-height: normal
   display: inline-block
   padding: 6px 8px
-  color: var(--button-text-color)
-  border-radius: var(--border-radius)
-  background: var(--button-background-color)
+  color: var(--product-status-text-color)
+  background: var(--product-status-background-color)
   border-radius: var(--border-radius-sm)
 
 .product-list-thumb-info
