--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -90,7 +90,7 @@ h1
 .wrapper
   margin: 0 auto
   max-width: 1200px
-  padding: 0 20px
+  padding: 0 16px
   width: 100%
 
 #main
@@ -124,18 +124,14 @@ h1
     text-decoration: underline
 
 .lookbook-gallery
+  display: flex
+  flex-direction: column
+  gap: 40px
   text-align: center
-
-  &:not(:only-child)
-    margin-top: 50px
 
 .lookbook-gallery-image
   display: block
-  margin-bottom: 50px
   width: 100%
-
-  &:last-child
-    margin-bottom: 0
 
 .header
   margin-bottom: 80px
@@ -150,7 +146,9 @@ a.store-link
   font-size: 2.5em
   line-height: 1.3
   margin: 40px auto
-  max-width: 754px
+  text-align: center
+  overflow-wrap: break-word
+  word-break: break-word
   width: 100%
 
   @media screen and (max-width: $break-small)
