More misc. cleanup

--- a/source/stylesheets/search.sass
+++ b/source/stylesheets/search.sass
@@ -53,7 +53,7 @@
     width: 100%
     font-size: 1em
     height: 48px
-    padding: 8px
+    padding: 8px 12px
 
   &__submit
     color: var(--button-text-color)
