Misc. variable cleanup

--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -1,5 +1,6 @@
 .home-welcome
   display: grid
+  border-radius: var(--border-radius)
   color: var(--welcome-header-text-color)
   position: relative
   align-items: center
@@ -29,6 +30,7 @@
     font-size: 1.5em
 
 .welcome-image
+  border-radius: var(--border-radius)
   display: block
   margin: 0 auto
   width: 100%
