--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -95,7 +95,7 @@ h1
 
 #main
   flex: 1
-  padding-bottom: 40px
+  padding-bottom: 60px
 
 .custom-content
   margin: 0 auto
@@ -171,10 +171,8 @@ header, footer
   text-align: center
 
 footer
-  padding: 80px 0
-
-  @media screen and (max-width: $break-small)
-    padding: 72px 0
+  border-top: 1px solid var(--border-color)
+  padding: 60px 0
 
   .wrapper
     display: flex
