--- a/source/stylesheets/overlay.sass
+++ b/source/stylesheets/overlay.sass
@@ -68,6 +68,9 @@
     align-items: center
     gap: 8px
 
+    &[aria-expanded="true"]
+      svg
+        transform: rotate(180deg)
     svg
       width: 14px
 
