--- a/source/stylesheets/navigation.sass
+++ b/source/stylesheets/navigation.sass
@@ -169,7 +169,7 @@
   min-width: 250px
   opacity: 0
   overflow-y: scroll
-  padding: 15px
+  padding: 10px 15px
   font-size: 1rem
   position: absolute
   text-align: left
@@ -177,7 +177,7 @@
   height: auto
   max-height: 50vh
   z-index: 3
-  top: calc(100% + 8px)
+  top: calc(100% + 4px)
   scrollbar-width: thin
   scrollbar-color: #{"rgba(var(--text-color-rgb),.5)"} transparent
   scrollbar-gutter: stable
@@ -215,7 +215,7 @@
 
     a
       display: block
-      padding: 8px
+      padding: 6px 8px
 
       &:hover
         text-decoration: underline
