Fix variable name

--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -10,7 +10,7 @@
 
   --border-color: #{'rgba(var(--text-color-rgb), .4)'}
 
-  --header-text-color: #{'{{ theme.header_text_color }}'}
+  --welcome-header-text-color: #{'{{ theme.welcome_header_text_color }}'}
 
   --button-background-color: #{'{{ theme.button_background_color }}'}
   --button-hover-background-color: #{'{{ theme.button_hover_background_color }}'}
