Related products style fixes

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -96,6 +96,7 @@ h1
 #main
   flex: 1
   padding-bottom: 60px
+  border-bottom: 1px solid var(--border-color)
 
 .custom-content
   margin: 0 auto
@@ -171,7 +172,6 @@ header, footer
   text-align: center
 
 footer
-  border-top: 1px solid var(--border-color)
   padding: 60px 0
 
   .wrapper
