--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -96,3 +96,18 @@
 
 #instant-checkout-button
   margin-top: 12px
+
+.related-products-container
+  background-color: var(--accent-background-color)
+  margin-top: 100px
+  padding: 60px 0
+  padding-bottom: 60px
+  margin-bottom: -60px
+
+.related-products-title
+  font-size: 1.75em
+  margin-bottom: 40px
+  text-align: center
+
+#product .content
+  padding-bottom: 60px
