--- a/source/stylesheets/overlay.sass
+++ b/source/stylesheets/overlay.sass
@@ -27,11 +27,10 @@
     padding: 24px 16px
     display: flex
     align-items: center
-    justify-content: flex-end
+    justify-content: flex-start
 
   &__close
     cursor: pointer
-    color: var(--text-color)
     height: 40px
     display: flex
     align-items: center
@@ -56,11 +55,8 @@
     margin: 16px 0 32px
 
     a
-      color: var(--text-color)
-
       &:hover
         text-decoration: underline
-
 
 .navigation-modal__categories
   &-toggle
@@ -81,4 +77,3 @@
 
     &[aria-hidden="true"]
       display: none
-
