--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -15,7 +15,6 @@ a.skip-link
   +transition(all .3s)
   background: var(--background-color)
   border: 1px solid var(--text-color)
-  color: var(--text-color)
   left: 25px
   padding: 15px 20px
   position: absolute
@@ -29,8 +28,9 @@ a.skip-link
 a, a:visited
   color: var(--text-color)
   text-decoration: none
+  transition: color .2s linear
 
-  &:hover, &:focus
+  &:hover
     color: var(--link-hover-color)
 
 .button, a.button
@@ -77,7 +77,6 @@ a, a:visited
       +transform(scale(1.02, 1.02))
 
 h1, h2, h3, h4, h5, h6
-  color: var(--text-color)
   font-weight: normal
   margin: 0
   padding: 0
@@ -254,7 +253,6 @@ footer
 .select
   border: 1px solid var(--text-color)
   border-radius: var(--border-radius)
-  color: var(--text-color)
   height: 60px
   max-width: 100%
   padding: 0
